adding malihog to docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,13 @@ services:
     networks:
       - crud
 
+  mailhog:
+    image: mailhog/mailhog
+    ports:
+      - 8025:8025
+    networks:
+      - crud
+
   nginx:
     image: nginx:latest
     ports:
