new Dockerfile with config files for php and nginx

--- a/.env
+++ b/.env
@@ -14,6 +14,8 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
+APP_DEBUG=0
+LOG_LEVEL=NOTICE
 APP_ENV=dev
 APP_SECRET=6e3c6cd51ef5bc7946fffd23290119f9
 ###< symfony/framework-bundle ###
